# hep-phase-space-slicer

./: .gitignore  README.md  pyproject.toml
src/hep_phase_space_slicer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/phase_space_slicer/: __init__.py  app.py  data.py
