[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hep-phase-space-slicer"
version = "0.1.0"
description = "Interactive correlation plot GUI for slicing numpy phase-space feature arrays."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "PySide6>=6.6",
    "pyqtgraph>=0.13",
]

[project.scripts]
hep-phase-space-slicer = "phase_space_slicer.app:main"

[tool.setuptools.packages.find]
where = ["src"]
